# work-smarter-not-harder

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COLLABORATORS.md  CONTRIBUTING.md  Caddyfile  GETTING_STARTED.md  PERSON1.md  PERSON2.md  PERSON3.md  README.md  SECRETS.md  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.test.yml  docker-compose.yml  install.sh  installation.md  pyproject.toml  requirements-dev.txt  seed.sh
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  pull_request_template.md
ai/: Dockerfile  For Shiri - predict contract.md  README.md  app.py  bench.py  calories.py  inference.py  jobqueue.py  recommendations.py  requirements.txt
db/: README.md  backup.sh  reset_user_data.py  seed.py
docs/: ANDROID_APK.md  ARCHITECTURE-REVIEW.md  AUTH_TESTING.md  CICD_REPORT.md  CI_TOGGLE.md  DEMO_RUNBOOK.md  DEPLOY_DEMO.md  DESIGN.md  EMAIL_DELIVERABILITY.md  FEEDBACK.md  GUIDELINES.md  HARDENING_REVIEW.md  JOB_QUEUE_PLAN.md  MOBILE_SMOKE_TEST.md  PROPOSAL-v2.md  PROPOSAL.md  README.md  REPORT.md  REVIEWER_NOTES.md  ROADMAP.md  SCALING_PLAN.md  SCALING_REPORT.md  STRESS_REPORT.md  SUBMISSION.md  TA-Notes.txt
presentation/: DEMO_DAY_CHECKLIST.md  Demo clip - recording checklist.md  For Elad - job queue robustness.md  README.md  WSNH Canva Notes (paste per slide).md  WSNH Demo Video Script.md  WSNH Presentation Outline.md  WSNH Speaker Notes and QA.md  WSNH Speaker Script (8-slide Canva).md  WSNH Submission Checklist.md  WSNH TA Mock QA Drill.md
scripts/: audit_dependencies.py  (+5 more)
(+136 files in other folders)
